--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,32 +1,31 @@
 
-
 <div class="container">
     
-    <div class="row">
+  <div class="row">
 
-      <div class="span3 splash-box">
-        <p class="splash-font"><strong>Let us help you find the perfect gift for your little ones<p class="gray-font">We only suggest the best products.</strong></p>
-        <hr/>
-        <p class="splash-font"><strong><%= mail_to("contact@bubboli.com", "Suggest A Toy", :subject => "Suggest A Toy") %></strong></br></p>
-        <p class="gray-font"><strong>Is there a toy that your child just absolutely loves? Suggest it to us so we can share it with others.</strong></p>
-        <hr/>
-        <p class="splash-font"><strong>WE ARE SOCIAL: </strong><br/></p>
-        <div style="opacity: 0.6">
-          <%= link_to facebook, "http://www.facebook.com/bubboli", :target => "_blank" %>  
-          <%= link_to twitter, "http://www.twitter.com/bubboli", :target => "_blank" %>
-          <p style="text-align: center"><%= link_to pinterest, "http://www.pinterest.com/bubboli/", :target => "_blank" %>
-          <%= link_to rss, "#", :target => "_blank" %></p>
-        </div>
+    <div class="span3 splash-box splash-box-effect">
+      <p class="splash-font"><strong>Let us help you find the perfect gift for your little ones<p class="gray-font">We find and recommend products
+        that are unique, useful, creative, modern and most importantly, fun.</strong></p>
+      <hr/>
+      <p class="splash-font"><strong>WE ARE SOCIAL: </strong><br/></p>
+      <div style="opacity: 0.6">
+        <%= link_to facebook, "http://www.facebook.com/bubboli", :target => "_blank" %> 
+        <%= link_to twitter, "http://www.twitter.com/bubboli", :target => "_blank" %>
+        <p style="text-align: center"><%= link_to pinterest, "http://www.pinterest.com/bubboli/", :target => "_blank" %>
+        <%= link_to rss, "#", :target => "_blank" %></p>
       </div>
-      
-      <div class="span9">
-        <div id="mainslideshow">
-        <%= splash_one %> 
-        <%= splash_two %>
-        </div>
-      </div>
+    </div>
     
-    </div>  
+    
+
+    
+    <div class ="span10">
+      
+      <%= render(:partial => "featured_gifts") %>
+
+    </div>
+  </div>
+  
   
   </br>
   </br>
