--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -289,7 +289,7 @@ li.prod-list {
   }
 
 hr {
-  border-bottom: 1px dashed $background-blue;
+  border-bottom: 2px dashed $background-blue;
   }
   
 pre {
@@ -363,15 +363,30 @@ img.float-right {
  * ===============================================*/
 
 .gift-buy-box {
-  height: 120px;
-  padding-top: 20px;
+  height: 130px;
+  width: 230px;
+  float: right;
+  margin-bottom: 15px;
+  padding-top: 15px;
   text-align: center;
   background-color: $background-blue;
   border-radius: 4px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
+  background: url(buy-background.png) no-repeat;
   }
 
+.gift-buy-box2 {
+  height: 420px;
+  width: 230px;
+  float: right;
+  padding-top: 10px;
+  text-align: center;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  background: url(gift-stats.png) no-repeat;
+  }
 
 /*==================================================
  * FOR RELATED GIFT IMAGES IN SHOW PAGE
