--- a/app/views/shared/_blog_index.html.erb
+++ b/app/views/shared/_blog_index.html.erb
@@ -18,7 +18,8 @@
     <div class="span7"><%= simple_format(truncate(blog.content, :length => 280, :separator => " ")) %></div>
   </div>
 
-  <hr/>
+  <div class="span3 dotted-hor-line"><%= separator %></div>
+
 </div>
 
 
