--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,3 +1,5 @@
+<meta property="og:image" content="<%= @gift.gift_images.first.image_url(:large_pic) %>" />
+
 <script type="text/javascript">
 $(document).ready(function() {
  
