added font and made changes to certain places using font

--- a/app/views/gifts/_related_gifts.html.erb
+++ b/app/views/gifts/_related_gifts.html.erb
@@ -1,5 +1,5 @@
 <% unless @similar_gifts.blank? %>
-  <h5 style="color: #53868B">Other Gifts You May Like</h5>
+  <h5 class="qikki-font" style="color: #53868B">Other Gifts You May Like</h5>
     <ul class="no-margin-or-bullet">
     <% @similar_gifts.each do |gift| %>
       <li class="related-gifts">
