--- a/app/views/gifts/brands.html.erb
+++ b/app/views/gifts/brands.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   
- <p class="brand-text">These brands share our commitment of providing your children with the best quality products.</p>
+ <p class="brand-text qikki-font">These brands share our commitment of providing your children with the best quality products.</p>
  
  </br>
  </br>
