--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   
   <hr/>
-    <div class="gray-font large-font">Hi, we are <span style="font-size: 38px; color: #FF6F6A; font-family:'MountainsofChristmas'">Bubboli</span> 
+    <div class="gray-font large-font qikki-font">Hi, we are <span style="font-size: 38px; color: #FF6F6A; font-family:'MountainsofChristmas'">Bubboli</span> 
       and here is a little about us.</div>
   <hr/>
   
   </br>
-  <h6>Who are you?</h6>
+  <h6 class="qikki-font">Who are you?</h6>
   
   We are godmothers and godfathers, aunties and uncles, 
   friends and colleagues who can’t help but get a little bubbly inside when we think about the children in
@@ -31,14 +31,14 @@
         </br>
         </br>
         
-        <h6>Why are there so few gifts on the site?</h6>
+        <h6 class="qikki-font">Why are there so few gifts on the site?</h6>
         
         That's an excellent question. Because we only endorse the best products on the market, we have to be very selective with what we
         show on the site. However, new products are always coming out and we are constantly adding and changing the list.
         
         </br>
         </br>
-      <h6>How long have you been around?</h6>      
+      <h6 class="qikki-font">How long have you been around?</h6>      
       </div>
 
     <div class="span6 pull-right"><%= bubboli_team %></div>
