testing git branching and deleting

--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -36,6 +36,8 @@ function switch_tabs(obj)
   <div class="row">
     <div class="span12">
       
+      TESTING
+      
       <div>
         <h3 class="qikki-font" style="color: #53868B"><%= @gift.name %></h3>
         <%= render(:partial => "gift_images") %>
