--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,7 +24,7 @@ $background-blue-two: #E4F9F8;
 $light-gray:          #bfbfbf;
 $background-orange:   #F9F2E3;
 $orange-red:          #FF4500;
-
+$bubboli-yellow:      #FEFCE6;
 
 @import 'bootstrap';
 
