--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
     <div class="logo-topbar">
       <div class="logo-topbar-fill">
         <div class="container">
-          <div class="nav">
+          <div>
             <% if current_user %>
               <%= link_to bubboli, root_path %>
             <% else %>
@@ -52,11 +52,35 @@
       </div>
     </div>
   
-    <div class="topbar">
-      <div class="fill">
-        <div class="container">
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+      <div class="container">
           <ul class="nav">
-            <li><%= tabs %></li>
+            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Bubboli Favorites", favorite_gift_path %></li>
+            <li><%= link_to "Brands We Love", gift_brand_path %></li>
+            <li><%= link_to "About", about_path %></li>
+            <% if current_user %>
+              <li><%= link_to "Users", users_path %></li>
+              <li id="fat-menu" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  Account <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Profile", "#" %></li>
+                  <li><%= link_to "Settings", "#" %></li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= link_to "Sign out", sign_out_path, method: "delete" %>
+                  </li>
+                </ul>
+              </li>
+            <% else %>
+              <li><%= link_to "Sign in", signin_path %></li>
+            <% end %>
+                      
+                      
+                      
             <li class="socialmedia-overlap blog"><%= link_to blog, blogs_path %></li>
 
           </ul>
