--- a/app/views/blogs/_comment_form.html.erb
+++ b/app/views/blogs/_comment_form.html.erb
@@ -4,9 +4,8 @@
     <%= f.input :commenter, :label => "Name" %>
     <%= f.input :commenter_email, :label => "Email" %>
     <%= f.input :commenter_permalink, :label => "Website" %>
-    <%= f.input :content, :label => "Comment", :input_html => { :rows => 6, :class => "xxlarge" } %>
+    <%= f.input :content, :label => "Comment", :input_html => { :rows => 6, :class => "input-xxlarge" } %>
   <div class="pull-right"><%= f.commit_button :button_html => {:class => "primary"}, :label => "Submit" %></div>
 <% end %>
-
 
 
