--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -19,50 +19,47 @@
 
   
   
-  <div class="span16">
-    <div class="row">
-      <div class="span10">
-        But enough about us.  Let's talk about you. Life is demanding and we know whether you're an aunt, uncle, 
-        cousin, friend or just a big kid at heart, sometimes you just don't have the time or don't know where to 
-        start looking for the perfect gift. Here is where we come in. We do all the research and only present our
-        favorite products on our site. <span style="color: #FF6F6A"><em>Our ultimate goal is to make your life easier</em></span> and this is just the beginning.
-        Let us do the heavy lifting so you can spend more time with the ones that matter most.
 
-        </br>
-        </br>
-        
-        <h6 class="qikki-font">Why are there so few gifts on the site?</h6>
-        
-        That's an excellent question. Because we only endorse the best products on the market, we have to be very selective with what we
-        show on the site. However, new products are always coming out and we are constantly adding and changing the list.
-        
-        </br>
-        </br>
-      <h6 class="qikki-font">How long have you been around?</h6>      
-      </div>
 
-    <div class="span6 pull-right"><%= bubboli_team %></div>
-      
-    <div class="span16">  
+      <span="span8">
+      But enough about us.  Let's talk about you. Life is demanding and we know whether you're an aunt, uncle, 
+      cousin, friend or just a big kid at heart, sometimes you just don't have the time or don't know where to 
+      start looking for the perfect gift. Here is where we come in. We do all the research and only present our
+      favorite products on our site. <span style="color: #FF6F6A"><em>Our ultimate goal is to make your life easier</em></span> and this is just the beginning.
+      Let us do the heavy lifting so you can spend more time with the ones that matter most.</span>
 
-      
-      Since February 2012.
-      Our company is still a baby, so please bear with us as we learn to crawl and take our 
-      first steps. We have a lot of great things planned for the months ahead and would love for you join us on 
-      our journey. Help us make Bubboli better or just drop us a note to say hi at <%= mail_to("contact@bubboli.com") %>.
-        
-      </br>
-      </br>  
-        
-      Also, check us out on Twitter at <%= link_to '@bubboli', "http://www.twitter.com/bubboli", :target => "_blank" %> 
-      or like us on <%= link_to 'Facebook', "http://www.facebook.com/bubboli", :target => "_blank" %>.
-      
       </br>
       </br>
       
-    </div>
+      <h6 class="qikki-font">Why are there so few gifts on the site?</h6>
+      
+      That's an excellent question. Because we only endorse the best products on the market, we have to be very selective with what we
+      show on the site. However, new products are always coming out and we are constantly adding and changing the list.
+      
+      </br>
+      </br>
+    <h6 class="qikki-font">How long have you been around?</h6>      
+  
+
+  <div class="span4 pull-right"><%= bubboli_team %></div>
+
+    Since February 2012.
+    Our company is still a baby, so please bear with us as we learn to crawl and take our 
+    first steps. We have a lot of great things planned for the months ahead and would love for you join us on 
+    our journey. Help us make Bubboli better or just drop us a note to say hi at <%= mail_to("contact@bubboli.com") %>.
+      
+    </br>
+    </br>  
+      
+    Also, check us out on Twitter at <%= link_to '@bubboli', "http://www.twitter.com/bubboli", :target => "_blank" %> 
+    or like us on <%= link_to 'Facebook', "http://www.facebook.com/bubboli", :target => "_blank" %>.
+    
+    </br>
+    </br>
+      
+
   </div>
   
-  </div>
+
 
 </div>
