--- a/app/views/shared/_blog_index.html.erb
+++ b/app/views/shared/_blog_index.html.erb
@@ -5,7 +5,7 @@
   </ul>
 </div>
 
-<div class="span10">
+<div class="span7">
   <ul class="no-margin-or-bullet">
     <li class="qikki-font" style="font-size: 18px"><%= link_to blog.title, blog %></li>
     <li style="font-size: 11px">Posted in <%= blog.blog_categories.collect {|cat| cat.name }.join(", ") %> | <%= link_to(pluralize(blog.comments.size, 'comment'), :action => 'show', :id => blog.id, :anchor => 'comments') %></li></br>
@@ -13,13 +13,13 @@
     
   
   <div class="row">
-    <div class="span3 no-margin-or-bullet"><%= image_tag(blog.blog_image.image_url(:thumb_pic).to_s) if blog.blog_image.image? %></div>
+    <div class="span2"><%= image_tag(blog.blog_image.image_url(:thumb_pic).to_s) if blog.blog_image.image? %></div>
       
-    <div class="span7"><%= simple_format(truncate(blog.content, :length => 280, :separator => " ")) %></div>
+    <div class="span5"><%= simple_format(truncate(blog.content, :length => 280, :separator => " ")) %></div>
   </div>
   
   </br>
-  <div class="span3 dotted-hor-line"><%= separator %></div>
+  <span class="span7 dotted-hor-line no-margin-or-bullet"><%= separator %></span>
   </br>
   
 </div>
