--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -6,28 +6,27 @@
 <div class="container">
   <%= page_navigation_links @blogs, '#' %>  
 
-  <div class="row">
-    <div class="span16">
+
       <div class="row">
-        <div class="span12">
+        <div class="span9">
           
           
           <div class="row">
-            <div class="span2">              
+            <div class="span1">              
               <ul class="no-margin-or-bullet">
                 <h3 class="mynewfont"><li><%= @blog.created_at.strftime("%b %e") %></li></h3>
                 <li style="font-size: 11px"><%= @blog.author %></li>
               </ul>
             </div>
 
-            <div class="span6">
+            <div class="span5">
               <ul class="no-margin-or-bullet">
                 <li style="font-size: 18px"><%= @blog.title %></li>
                 <li style="font-size: 11px"><%= @blog.blog_categories.collect {|cat| cat.name }.join(", ") %> | <%= link_to(pluralize(@blog.comments.size - 1, 'comment'), :action => 'show', :id => @blog.id, :anchor => 'comments') %></li>                
               </ul>
             </div>
 
-            <div class="span4 no-margin-or-bullet">
+            <div class="span3 no-margin-or-bullet pull-right">
               <span class='st_facebook_hcount' displayText='Facebook'></span>
               <span class='st_twitter_hcount' displayText='Tweet' st_title='<%= @page_title %> via @bubboli'></span>
             </div>
@@ -49,7 +48,7 @@
           
           <hr/>        
         
-          <div class="comment">
+          <div class="comment form-horizontal">
             <h5 class="gray-font">Leave a comment</h5>
             <%= render(:partial => "shared/flash", :locals => {:flash => flash}) %>
             <%= render(:partial => 'comment_form')%>
@@ -71,14 +70,12 @@
           </div>
         </div>
 
-        <div class="span4 form-stacked">      
+        <div class="span2 form-stacked">      
           <%= render(:partial => 'shared/blog_search')%>          
           <%= render(:partial => 'shared/archive_list')%>          
         </div>
 
       </div>
-    </div>  
-  </div> 
     
     <div class="row will-paginate pull-right">
         <%= page_navigation_links @blogs, '#' %>  
