--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,16 +38,7 @@
               <%= link_to bubboli, root_path %>
             <% end %>
           </div>
-      
-          <div class="sign-out">
-            <% if current_user %>
-              Welcome back, <%= current_user.first_name %> | <%= link_to "Sign out", sign_out_path %></br>
-              <%= link_to "Admin Panel", admin_path %>
-            <% else %>
-
-            <% end %>
-          </div>
-      
+            
         </div>
       </div>
     </div>
@@ -60,14 +51,13 @@
             <li><%= link_to "Bubboli Favorites", favorite_gift_path %></li>
             <li><%= link_to "Brands We Love", gift_brand_path %></li>
             <li><%= link_to "About", about_path %></li>
-            <% if current_user %>
-              <li><%= link_to "Users", users_path %></li>
+            <% if signed_in? %>
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   Account <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Profile", "#" %></li>
+                  <li><%= current_user.admin == true ? link_to("Admin Panel", admin_path) : link_to("Profile", "#")%></li>
                   <li><%= link_to "Settings", "#" %></li>
                   <li class="divider"></li>
                   <li>
@@ -76,7 +66,7 @@
                 </ul>
               </li>
             <% else %>
-              <li><%= link_to "Sign in", signin_path %></li>
+              <li><%= link_to "Sign in", sign_in_path %></li>
             <% end %>
                       
                       
